5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1594_1800.log
== TEST (2019-04-04 12:38:56) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

a*1
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:39:24) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

print(a*1)
-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:39:41) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

print(a*1)
-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:40:43) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

print(round( (a**2) )
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:40:53) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

print(round((a**2))
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:40:58) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

print(round(a**2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:41:18) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

print(round(a**2,1)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:41:34) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))


-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:43:25) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

x= ((a**2)+(b**2)+(c**2))/(a+b+c)
print(x)
-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:44:24) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

x= ((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(x,07))
-- ERROR:
File "XXXX", line 6
    print(round(x,07))
                   ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:44:35) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

x= ((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(x,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:44:48) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
c= float(input("valor de c:"))

x= ((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(x,7))
-- EXECUTION TIME:
0.19343
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
